--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -35,8 +35,8 @@
                         <ul class="navbar-nav lead text-center">
                             <li class="nav-item px-2 "><a class="nav-menu-link nav-link" th:href="@{/barberia/menu}" style="color: white;">[[#{plantilla.menu}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/barberia/agendar}" style="color: white;">[[#{plantilla.apartar}]]</a></li>
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/producto/listado}" style="color: white;">[[#{plantilla.productos}]]</a></li>
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/carrito/listado}" style="color: white;">[[#{plantilla.carrito}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/barberia/producto}" style="color: white;">[[#{plantilla.productos}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/barberia/carrito}" style="color: white;">[[#{plantilla.carrito}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/barberia/perfil}" style="color: white;">[[#{plantilla.perfil}]]</a></li>
                         </ul>
                         <div class="col-md-3">
